--- a/resources/views/layouts/master.edge
+++ b/resources/views/layouts/master.edge
@@ -26,5 +26,8 @@
         <!-- Lado direito-->
         @!section('content')
   
+        <!-- Scripts JavaScript-->
+        @!section('scripts')
+        
     </body>
 </html>
