--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,6 +73,8 @@ li a:hover {
   float: right;
   margin-right: 30px;
   margin-top: 22px;
+  align-items:stretch;
+  /* justify-content:space-evenly; */
 }
 
 #pesquisar {
@@ -85,6 +87,7 @@ li a:hover {
   min-width: 250px;
   font-size: 16px;
   float: right;
+
 }
 
 table {
@@ -754,3 +757,31 @@ float: left;
   border-radius: 15px;
   opacity: 1;
 }
+#form.pesquisa {
+position: relative;
+padding-top: 13px;
+margin-top: 50px;
+margin-left: 75px;
+width: 350px;
+float: right;
+}
+
+#div.paginacao{
+ margin-left: 150px;
+}
+
+
+/* #icone-pesquisa{
+  float:left;
+  background-color:transparent;
+  padding-left:5px;
+  font-style:italic;
+  font-size:18px;
+  border:none;
+  /* height:0px;
+  width:0px; */
+  /* align-items:inherit; */
+  /* position: relative;
+  top: 0px;
+  right: 0px;
+  float: right; */
