--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,8 +73,6 @@ li a:hover {
   float: right;
   margin-right: 30px;
   margin-top: 22px;
-  align-items:stretch;
-  /* justify-content:space-evenly; */
 }
 
 #pesquisar {
@@ -167,14 +165,12 @@ th {
   border: 0;
   border-bottom: 2px solid lightgrey;
   outline: none;
-  min-width: 350px;
   font-size: 16px;
   transition: all .3s ease-out;
   -webkit-transition: all .3s ease-out;
   -moz-transition: all .3s ease-out;
   -webkit-appearance:none;
   border-radius: 0;
-
 }
 
 .label input:focus{
@@ -202,6 +198,7 @@ th {
   margin-top: 50px;
   margin-left: 75px;
   width: 350px;
+  height: 40px;
   float: left;
 }
 
@@ -216,7 +213,7 @@ th {
   -moz-transition: all .3s ease-out;
   -webkit-appearance:none;
   border-radius: 0;
-
+  
 }
 
 .label-float input:focus{
@@ -253,6 +250,7 @@ th {
   margin-top: 0;
   color: #707070;
 }
+
 
 #lista-cadastro {
   margin-top: 160px;
@@ -672,7 +670,7 @@ iframe {
 #lista-cadastro-cliente {
   margin-top: 160px;
   width: 970px;
-  height: 830px;
+  height: 880px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   box-shadow: -3px -5px 6px #00000024;
   border-radius: 15px;
@@ -693,17 +691,17 @@ iframe {
 
 /* Alteração Fabrício  */
 span.mens-error {
-  
-  color: #999999;
-  font: 10px Verdana, sans-serif;
-
+  color: #e21c1c;
+  font: 14px Verdana, sans-serif;
 }
+
 .label-edit{
 position: relative;
 padding-top: 13px;
 margin-top: 50px;
 margin-left: 75px;
 width: 350px;
+height: 40px;
 float: left;
 }
 
@@ -757,31 +755,9 @@ float: left;
   border-radius: 15px;
   opacity: 1;
 }
-#form.pesquisa {
-position: relative;
-padding-top: 13px;
-margin-top: 50px;
-margin-left: 75px;
-width: 350px;
-float: right;
+
+
+
+.div-paginacao{
+  text-align: center;
 }
-
-#div.paginacao{
- margin-left: 150px;
-}
-
-
-/* #icone-pesquisa{
-  float:left;
-  background-color:transparent;
-  padding-left:5px;
-  font-style:italic;
-  font-size:18px;
-  border:none;
-  /* height:0px;
-  width:0px; */
-  /* align-items:inherit; */
-  /* position: relative;
-  top: 0px;
-  right: 0px;
-  float: right; */
