Alteração no cliente.edit em tipo e estado

--- a/resources/views/frontend/clientes/create.edge
+++ b/resources/views/frontend/clientes/create.edge
@@ -136,6 +136,7 @@
         <option value="PI">PI</option>
         <option value="PR">RR</option>
         <option value="RO">RO</option>
+        <option value="RR">RO</option>
         <option value="RJ">RJ</option>
         <option value="RN">RN</option>
         <option value="RS">RS</option>
