--- a/resources/views/frontend/clientes/create.edge
+++ b/resources/views/frontend/clientes/create.edge
@@ -13,11 +13,11 @@
 
     <div class="label-float">
       <select id="drop-list-tipo-pessoa" onchange="selecionaTipoPessoa()">
-        <option value="" selected>Selecione o tipo de pessoa</option>
-        <option value="PF">PF</option>
-        <option value="PJ">PJ</option>
+        <option value="" {{ old('tipo', '') == '' ? "selected" : '' }}>Selecione o tipo de pessoa</option>
+        <option value="PF"{{ old('tipo', '') == 'PF' ? "selected" : '' }}>PF</option>
+        <option value="PJ"{{ old('tipo', '') == 'PJ' ? "selected" : '' }}>PJ</option>
       </select>
-      <input type="hidden" value="" name="tipo" id="input-tipo-pessoa">
+      <input type="hidden" value="{{ old('tipo', '') }}" name="tipo" id="input-tipo-pessoa">
       <label>Tipo de Pessoa</label>
       @if(hasErrorFor('tipo')) 
       <span class= "mens-error"> {{ getErrorFor('tipo') }} </span>
@@ -115,36 +115,36 @@
 
     <div class="label-float">
       <select id="drop-list-estado" onchange="selecionaEstado()">
-        <option value="" selected>Selecione o estado</option>
-        <option value="AL">AL</option>
-        <option value="AC">AC</option>
-        <option value="AP">AP</option>
-        <option value="AM">AM</option>
-        <option value="BA">BA</option>
-        <option value="CE">CE</option>
-        <option value="DF">DF</option>
-        <option value="ES">ES</option>
-        <option value="GO">GO</option>
-        <option value="MA">MA</option>
-        <option value="MT">MT</option>
-        <option value="MS">MS</option>
-        <option value="MG">MG</option>
-        <option value="PA">PA</option>
-        <option value="PB">PB</option>
-        <option value="PR">PR</option>
-        <option value="PE">PE</option>
-        <option value="PI">PI</option>
-        <option value="PR">RR</option>
-        <option value="RO">RO</option>
-        <option value="RJ">RJ</option>
-        <option value="RN">RN</option>
-        <option value="RS">RS</option>
-        <option value="SC">SC</option>
-        <option value="SP">SP</option>
-        <option value="SE">SE</option>
-        <option value="TO">TO</option>
+        <option value=""   {{ old('estado', '') == '' ? "selected" : '' }}>Selecione o estado</option>
+        <option value="AL" {{ old('estado', '') == 'AL' ? "selected" : '' }}>AL</option>
+        <option value="AC" {{ old('estado', '') == 'AC' ? "selected" : '' }}>AC</option>
+        <option value="AP" {{ old('estado', '') == 'AP' ? "selected" : '' }}>AP</option>
+        <option value="AM" {{ old('estado', '') == 'AM' ? "selected" : '' }}>AM</option>
+        <option value="BA" {{ old('estado', '') == 'BA' ? "selected" : '' }}>BA</option>
+        <option value="CE" {{ old('estado', '') == 'CE' ? "selected" : '' }}>CE</option>
+        <option value="DF" {{ old('estado', '') == 'DF' ? "selected" : '' }}>DF</option>
+        <option value="ES" {{ old('estado', '') == 'ES' ? "selected" : '' }}>ES</option>
+        <option value="GO" {{ old('estado', '') == 'GO' ? "selected" : '' }}>GO</option>
+        <option value="MA" {{ old('estado', '') == 'MA' ? "selected" : '' }}>MA</option>
+        <option value="MT" {{ old('estado', '') == 'MT' ? "selected" : '' }}>MT</option>
+        <option value="MS" {{ old('estado', '') == 'MS' ? "selected" : '' }}>MS</option>
+        <option value="MG" {{ old('estado', '') == 'MG' ? "selected" : '' }}>MG</option>
+        <option value="PA" {{ old('estado', '') == 'PA' ? "selected" : '' }}>PA</option>
+        <option value="PB" {{ old('estado', '') == 'PB' ? "selected" : '' }}>PB</option>
+        <option value="PR" {{ old('estado', '') == 'PR' ? "selected" : '' }}>PR</option>
+        <option value="PE" {{ old('estado', '') == 'PE' ? "selected" : '' }}>PE</option>
+        <option value="PI" {{ old('estado', '') == 'PI' ? "selected" : '' }}>PI</option>
+        <option value="PR" {{ old('estado', '') == 'PR' ? "selected" : '' }}>RR</option>
+        <option value="RO" {{ old('estado', '') == 'RO' ? "selected" : '' }}>RO</option>
+        <option value="RJ" {{ old('estado', '') == 'RJ' ? "selected" : '' }}>RJ</option>
+        <option value="RN" {{ old('estado', '') == 'RN' ? "selected" : '' }}>RN</option>
+        <option value="RS" {{ old('estado', '') == 'RS' ? "selected" : '' }}>RS</option>
+        <option value="SC" {{ old('estado', '') == 'SC' ? "selected" : '' }}>SC</option>
+        <option value="SP" {{ old('estado', '') == 'SP' ? "selected" : '' }}>SP</option>
+        <option value="SE" {{ old('estado', '') == 'SE' ? "selected" : '' }}>SE</option>
+        <option value="TO" {{ old('estado', '') == 'TO' ? "selected" : '' }}>TO</option>
       </select>
-      <input type="hidden" name="estado" value="" id="input-estado">
+      <input type="hidden" name="estado" value="{{ old('estado', '') }}" id="input-estado">
       <label>Estado</label>
       @if(hasErrorFor('estado')) 
       <span class= "mens-error"> {{ getErrorFor('estado') }} </span>
